--- a/components/common-title/common-title.wxml
+++ b/components/common-title/common-title.wxml
@@ -1,7 +1,7 @@
 <!--components/common-title/common-title.wxml-->
 <view class='box'>
-  <view class='title'>我是标题</view>
-  <navigator url='/pages/about/about.wxml'>
-    查看更多+
+  <view class='title'>{{title}}</view>
+  <navigator wx:if='{{more}}' url='{{urls}}' open-type='{{openType}}' class='more'>
+    {{more}}
   </navigator>
 </view>
