--- a/components/common-card/common-card.wxml
+++ b/components/common-card/common-card.wxml
@@ -1,7 +1,8 @@
 <!--components/common-card/common-card.wxml-->
-<navigator class="card" url="/pages/product/product">
-  <view class="title">{{title}}</view>
+<navigator class="card" url="/pages/detail/detail">
+  <view class="title">{{cardData.title}}</view>
   <view class="content">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aperiam atque aut beatae consequuntur cum dolorem, enim eveniet facere fugiat ipsa laborum, nemo, nihil nisi perspiciatis quam qui quod ratione.
+    {{cardData.content}}
   </view>
+  <image src='{{cardData.thumbs}}' mode='widthFix' class='thumb'></image>
 </navigator>
