--- a/pages/about/about.wxss
+++ b/pages/about/about.wxss
@@ -1,1 +1,29 @@
 /* pages/about/about.wxss */
+.about_content {
+  padding: 30rpx 30rpx 0;
+}
+
+.about_pic {
+  overflow: hidden;
+  height: 300rpx;
+  margin-bottom: 30rpx;
+  text-align: center;
+}
+
+.about_intro {
+  text-align: justify;
+  font-size: 28rpx;
+  line-height: 48rpx;
+}
+
+.infor_list {
+  font-size: 24rpx;
+  color: #666;
+  padding: 0 30rpx;
+}
+
+.infor_item {
+  height: 72rpx;
+  line-height: 72rpx;
+  border-bottom: 1px solid #efefef;
+}
