--- a/pages/about/about.wxml
+++ b/pages/about/about.wxml
@@ -1,2 +1,38 @@
-<!--pages/about/about.wxml-->
-<text>pages/about/about.wxml</text>
+<view class="menu_box">
+  <text class='menu1 {{menuTapCurrent=="0"?"borders":""}}' data-current="0" catchtap="menuTap">关于我们</text>
+  <text class='menu2 {{menuTapCurrent=="1"?"borders":""}}' data-current="1" catchtap="menuTap">联系方式</text>
+</view>
+<view class="tab1" hidden="{{menuTapCurrent!='0'}}">
+  <view class='about_content'>
+    <view class='about_pic'>
+      <image src='{{about.pic}}' mode='widthFix'></image>
+    </view>
+    <view class='about_intro'>
+      {{about.intro}}
+    </view>
+  </view>
+</view>
+<view class="tab2" hidden="{{menuTapCurrent!='1'}}">
+  <view class='map_container'>
+  <map id="map" longitude="112.961645" latitude="34.520218" scale="14" controls="{{controls}}" bindcontroltap="controltap" markers="{{markers}}" bindmarkertap="markertap" polyline="{{polyline}}" bindregionchange="regionchange" show-location style="width: 100%; height: 200px;"></map>
+  </view>
+  <view class='infor_list'>
+    <view class='infor_item'>
+      联系人：某某某
+    </view>
+    <view class='infor_item'>
+      电话：13676910123
+    </view>
+    <view class='infor_item'>
+      邮箱：xxxxxxxx@qq.com
+    </view>
+    <view class='infor_item'>
+      网址：http://www.xxxxxxxxx.com
+    </view>
+    <view class='infor_item'>
+      地址：河南省登封市嵩山少林武术学校
+    </view>
+  </view>
+</view>
+
+<slide-icon></slide-icon>
