--- a/pages/course/course.wxss
+++ b/pages/course/course.wxss
@@ -1,1 +1,11 @@
-/* pages/course/course.wxss */
+.card_box {
+  padding: 0 30rpx 30rpx;
+}
+
+.around_unit {
+  padding: 0 30rpx;
+}
+
+.around_cell {
+  margin: 20rpx 0;
+}
