--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,41 +1,101 @@
-<import src="/template/template.wxml" />
-
-<swiper indicator-dots="{{indicatorDots}}"
-  autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" circular="{{circular}}" indicator-color="{{indicatorColor}}" indicator-active-color="{{indicatorActiveColor}}">
+<swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" circular="{{circular}}" indicator-color="{{indicatorColor}}" indicator-active-color="{{indicatorActiveColor}}">
   <block wx:for="{{imgUrls}}" wx:key="">
     <swiper-item>
-      <image src="{{item}}" class="slide-image" mode='aspectFill'/>
+      <image src="{{item}}" class="slide-image" mode='widthFix' />
     </swiper-item>
   </block>
 </swiper>
 
-<view class='about_box'>
-  <common-title title="学校简介" urls="{{'/pages/about/about'}}"></common-title>
+<view class='notice_box'>
+  <view class='notice_unit about_intro'>
+    {{notice.content}}
+  </view>
+</view>
+
+<view class='about_box bd_btm'>
+  <common-title title="学校简介"></common-title>
   <view class='about_content'>
     <view class='about_pic'>
-      <image src='{{about.pic}}' mode='aspectFill'></image>
+      <image src='{{about.pic}}' mode='widthFix'></image>
     </view>
     <view class='about_intro'>
       {{about.intro}}
     </view>
   </view>
-  <view class='notice_box'>
-    <view class='notice_unit about_intro'>
-      {{notice.content}}
+  <view class='phone_box align_center'>
+    <phone-number numbers="13676910123" urls="/pages/about/about"></phone-number>
+  </view>
+</view>
+
+<view class='about_box bd_btm'>
+  <common-title title="招生简章"></common-title>
+  <view class='about_zhang'>
+    <image src='/image/jianzhang.jpg' mode='widthFix'></image>
+  </view>
+  <view class='phone_box align_center'>
+    <phone-number numbers="13676910123" urls="/pages/detail/detail"></phone-number>
+  </view>
+</view>
+
+<view class='course_box bd_btm'>
+  <common-title title="课程安排"></common-title>
+  <view class="cards" wx:for="{{courseData}}" wx:key="{{item.index}}">
+    <common-card cardData="{{item}}"></common-card>
+  </view>
+  <view class='phone_box align_center'>
+    <phone-number numbers="13676910123" urls="/pages/course/course"></phone-number>
+  </view>
+</view>
+
+<view class='around_box bd_btm'>
+  <common-title title="校园环境"></common-title>
+  <view class='around_unit'>
+    <view class='around_cell' wx:for="{{caseData}}" wx:key="{{item.index}}">
+      <case-card caseData="{{item}}" hasLow="{{false}}"></case-card>
     </view>
   </view>
   <view class='phone_box align_center'>
-    <phone-number numbers="13676910123"></phone-number>
+    <phone-number numbers="13676910123" urls="/pages/news/news"></phone-number>
   </view>
 </view>
 
-<view class='school_box'>
-  <common-title title="新闻中心" urls="{{'/pages/news/news'}}"></common-title>
-  
+<view class='news_box bd_btm'>
+  <common-title title="新闻中心"></common-title>
+  <view class='news_unit'>
+    <view class='news_cell' wx:for="{{newsData}}" wx:key="{{item.index}}">
+      <news-card newsData="{{item}}"></news-card>
+    </view>
+  </view>
+  <view class='phone_box align_center'>
+    <phone-number numbers="13676910123" urls="/pages/news/news"></phone-number>
+  </view>
 </view>
 
-<view class="cards" wx:for="{{3}}">
-  <common-card title="文化课程"></common-card>
+<view class='sign_box bd_btm'>
+  <common-title title="马上报名"></common-title>
+  <form bindsubmit='formSubmit'>
+    <view class='sign_form'>
+      <input class='sign_ipt' type='text' placeholder='请输入姓名'></input>
+    </view>
+    <view class='sign_form'>
+      <input class='sign_ipt' type='number' maxlength='11' placeholder='请输入电话'></input>
+    </view>
+    <view class='sign_form'>
+      <button form-type='submit' class='sign_btn'>提交</button>
+    </view>
+  </form>
+
+  <view class='foot_box'>
+    <view class='foot_cell'>学校地址：{{footData.adr}}</view>
+    <view class='foot_cell'>招生办公室电话：{{footData.tell}}</view>
+    <!-- <view class='foot_cell'>
+      <view class='foot_ewm'>
+        <image src='{{footData.ewm}}' mode="widthFix"></image>
+      </view>
+      官方二维码
+    </view> -->
+    <view class='foot_cell'>技术支持：{{footData.duo}}</view>
+  </view>
 </view>
 
-
+<slide-icon></slide-icon>
