--- a/components/case-card/case-card.wxml
+++ b/components/case-card/case-card.wxml
@@ -1,7 +1,7 @@
 <!--components/case-card/case-card.wxml-->
-<navigator class='connect {{hasLow ? "" : "low"}}' url='/pages/detail/detail'>
+<view class='connect {{hasLow ? "" : "low"}}'>
   <view class='thumbs'>
-    <image src='{{caseData.thumbs}}' mode='widthFix'></image>
+    <image src='{{caseData.image}}' mode='aspectFill'></image>
   </view>
   <view class='titles'>{{caseData.title}}</view>
-</navigator>
+</view>
