--- a/pages/course/course.wxml
+++ b/pages/course/course.wxml
@@ -1,19 +1,18 @@
 <view class="menu_box">
-  <text class='menu1 {{menuTapCurrent=="0"?"borders":""}}' data-current="0" catchtap="menuTap">收费标准</text>
-  <text class='menu2 {{menuTapCurrent=="1"?"borders":""}}' data-current="1" catchtap="menuTap">开设课程</text>
+  <text wx:for='{{typeData}}' wx:key='{{item.ty_id}}' class='menu1 {{menuTapCurrent===item.ty_id?"borders":""}}' data-current="{{item.ty_id}}" catchtap="menuTap">{{item.ty_name}}</text>
+  <!-- <text class='menu2 {{menuTapCurrent=="1"?"borders":""}}' data-current="1" catchtap="menuTap">开设课程</text> -->
 </view>
-<view class="tab1" hidden="{{menuTapCurrent!='0'}}">
+<view class="tab1" hidden="{{menuTapCurrent!='3'}}">
   <view class='around_unit'>
-    <view class='around_cell' wx:for="{{caseData}}" wx:key="{{item.index}}">
-      <case-card caseData="{{item}}"></case-card>
+    <view class='around_cell' wx:for="{{listData}}" wx:key="{{item.index}}">
+      <case-card caseData="{{item}}" bindtap='toDetail' data-id="{{item.id}}" data-type="cases"></case-card>
     </view>
   </view>
 </view>
-<view class="tab2" hidden="{{menuTapCurrent!='1'}}">
-  <view class='card_box'>
-    <view class="cards" wx:for="{{courseData}}" wx:key="{{item.index}}">
-      <common-card cardData="{{item}}"></common-card>
-    </view>
+
+<view class="tab2" hidden="{{menuTapCurrent!='2'}}">
+  <view class="cards" wx:for="{{listData}}" wx:key="{{item.index}}">
+    <common-card cardData="{{item}}" bindtap='toDetail' data-id="{{item.id}}" data-type="cases"></common-card>
   </view>
 </view>
 
