--- a/pages/about/about.wxml
+++ b/pages/about/about.wxml
@@ -14,7 +14,7 @@
 </view>
 <view class="tab2" hidden="{{menuTapCurrent!='1'}}">
   <view class='map_container'>
-  <map id="map" longitude="{{callData.longs}}" latitude="{{callData.lats}}" scale="14" controls="{{controls}}" bindcontroltap="controltap" markers="{{markers}}" bindmarkertap="markertap" polyline="{{polyline}}" bindregionchange="regionchange" show-location style="width: 100%; height: 200px;"></map>
+  <map id="map" longitude="{{callData.longs}}" latitude="{{callData.lats}}" scale="14" controls="{{controls}}" bindcontroltap="controltap" markers="{{markers}}" show-location="true" bindmarkertap="markertap" polyline="{{polyline}}" bindregionchange="regionchange" show-location style="width: 100%; height: 200px;"></map>
   </view>
   <view class='infor_list'>
     <view class='infor_item'>
@@ -30,7 +30,7 @@
       网址：{{callData.url}}
     </view>
     <view class='infor_item'>
-      地址：{{callData.addr}}
+      地址：{{callData.addr}}<view class='info_map' bindtap='toMap'>点击查看地图</view>
     </view>
   </view>
 </view>
