--- a/pages/about/about.wxss
+++ b/pages/about/about.wxss
@@ -17,13 +17,19 @@
 }
 
 .infor_list {
-  font-size: 24rpx;
+  font-size: 28rpx;
   color: #666;
   padding: 0 30rpx;
 }
 
 .infor_item {
-  height: 72rpx;
-  line-height: 72rpx;
+  height: 80rpx;
+  line-height: 80rpx;
   border-bottom: 1px solid #efefef;
+}
+
+.info_map {
+  display: inline-block;
+  font-size: 24rpx;
+  color: #999;
 }
