--- a/components/slide-icon/slide-icon.wxml
+++ b/components/slide-icon/slide-icon.wxml
@@ -3,7 +3,7 @@
   <view class='slide_tell slide_box' bindtap='toPhone'>
     <image src='/image/icon-tell.png' mode='widthFix'></image>
   </view>
-  <view class='slide_node slide_box' bindtap='toTalk'>
+  <button class='slide_node slide_box' open-type='contact'>
     <image src='/image/icon-node.png' mode='widthFix'></image>
-  </view>
+  </button>
 </view>
