--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -7,23 +7,23 @@
 </swiper>
 
 <view class='notice_box'>
-  <view class='notice_unit about_intro'>
-    {{notice.desc}}
-  </view>
+  <rich-text class='notice_unit about_intro' nodes="{{notice.desc}}"></rich-text>
 </view>
 
 <view class='about_box bd_btm'>
   <common-title title="学校简介"></common-title>
   <view class='about_content'>
+  <navigator url='/pages/intro/intro'>
     <view class='about_pic'>
       <image src='{{about.image}}' mode='aspectFill'></image>
     </view>
     <view class='about_intro'>
       {{about.summary}}
     </view>
+    </navigator>
   </view>
   <view class='phone_box align_center'>
-    <phone-number numbers="{{phone.phone}}" urls="/pages/about/about"></phone-number>
+    <phone-number numbers="{{phone.phone}}" open-type="navigate" urls="/pages/intro/intro"></phone-number>
   </view>
 </view>
 
@@ -35,7 +35,7 @@
     </navigator>
   </view>
   <view class='phone_box align_center'>
-    <phone-number numbers="{{phone.phone}}" urls="/pages/rules/rules"></phone-number>
+    <phone-number numbers="{{phone.phone}}" open-type="navigate" urls="/pages/rules/rules"></phone-number>
   </view>
 </view>
 
@@ -62,10 +62,15 @@
 </view>
 
 <view class='news_box bd_btm'>
-  <common-title title="新闻中心"></common-title>
-  <view class='news_unit'>
+  <common-title title="家长问答"></common-title>
+  <!-- <view class='news_unit'>
     <view class='news_cell' wx:for="{{news}}" wx:key="{{item.index}}">
       <news-card newsData="{{item}}" bindtap="toDetail" data-id="{{item.id}}" data-type="news"></news-card>
+    </view>
+  </view> -->
+  <view class='around_news'>
+    <view class='around_cell' wx:for="{{news}}" wx:key="{{item.index}}">
+      <case-card caseData="{{item}}" bindtap="toDetail" data-id="{{item.id}}" data-type="news"></case-card>
     </view>
   </view>
   <view class='phone_box align_center'>
@@ -83,6 +88,9 @@
       <input bindinput='inputForm' data-type='phone' maxlength='11' class='sign_ipt' type='number' placeholder='请输入电话' value='{{formInfo.phone}}' />
     </view>
     <view class='sign_form'>
+      <input bindinput='inputForm' data-type='age' maxlength='2' class='sign_ipt' type='number' placeholder='请输入年龄' value='{{formInfo.age}}' />
+    </view>
+    <view class='sign_form'>
       <button form-type='submit' class='sign_btn'>提交</button>
     </view>
   </form>
@@ -92,7 +100,7 @@
     <view class='foot_cell'>招生办公室电话：{{footer.tel}}</view>
     <view class='foot_cell'>
       <view class='foot_ewm'>
-        <image src='{{footer.qrcode}}' mode="aspectFill"></image>
+        <image src='{{footer.qrcode}}' bindtap='viewPic' mode="aspectFill"></image>
       </view>
     </view>
     <view class='foot_cell'>技术支持：朵朵科技</view>
