--- a/components/common-title/common-title.wxml
+++ b/components/common-title/common-title.wxml
@@ -1,11 +1,8 @@
 <!--components/common-title/common-title.wxml-->
 <view class='box'>
-<<<<<<< HEAD
-  <view class='title'>我是标题</view>
+  <!-- <view class='title'>我是标题</view>
   <navigator url='/pages/about/about.wxml' class='more'>
     查看更多+
-  </navigator>
-=======
+  </navigator> -->
   <view class='title'>{{title}}</view>
->>>>>>> dev
 </view>
